--- a/websites/sindhi-sangat-uk/css/style.css
+++ b/websites/sindhi-sangat-uk/css/style.css
@@ -1,231 +1,266 @@
 /*** Mixins & Default Styles ***/
-@mixin object($width, $height, $bg) {
-	width: $width;
-	height: $height;
-	background: $bg;
-}
-@mixin transPos($top, $right, $bottom, $left,$transX,$transY) {
-	position: absolute;
-	top: $top;
-	left: $left;
-	right: $right;
-	bottom: $bottom;
-	transform: translate($transX, $transY);
-}
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-}
-
-body {
+  }
+  
+  body {
 	overflow-x: hidden;
 	overflow-y: scroll;
-}
-
-/*** Color Variables ***/
-$header-bg: #5661f2;
-$nav-bg: #46b2f0;
-$pink: #fa6c98;
-$aqua: #79edfc;
-$accent: #fff;
-
-/*** Centering Hack ***/
-@mixin center {
+  }
+  
+  /*** Color Variables ***/
+  /*** Centering Hack ***/
+  /*** Header Styles ***/
+  header {
+	width: 100vw;
+	height: 100vh;
+	background: #5661f2;
+	display: -webkit-box;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-/*** Header Styles ***/
-header {
-	@include object(100vw,100vh,$header-bg);
-	display: flex;
-}
-
-/*** Navigation Styles ***/
-nav {
-	@include object(100vw,160px,$nav-bg);
+  }
+  
+  /*** Navigation Styles ***/
+  nav {
+	width: 100vw;
+	height: 160px;
+	background: #46b2f0;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	position: fixed;
 	z-index: 10;
+	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
-	&.navShadow {
-		box-shadow: 0 4px 30px -5px rgba(#000, 0.2);
-		height: 100px;
-		#word-mark {
-			opacity: 0;
-		}
-	}
-}
-
-#brand,
-#menu,
-ul {
+  }
+  nav.navShadow {
+	box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
+	height: 100px;
+  }
+  nav.navShadow #word-mark {
+	opacity: 0;
+  }
+  
+  #brand,
+  #menu,
+  ul {
+	display: -webkit-box;
 	display: flex;
-	align-items: center;
-}
-
-#brand {
+	-webkit-box-align: center;
+			align-items: center;
+  }
+  
+  #brand {
 	padding-left: 40px;
-}
-
-#logo {
-	@include object(55px,55px,$accent);
+  }
+  
+  #logo {
+	width: 55px;
+	height: 55px;
+	background: #fff;
 	border-radius: 50%;
 	cursor: pointer;
-}
-
-#word-mark {
-	@include object(120px,20px,$accent);
+  }
+  
+  #word-mark {
+	width: 120px;
+	height: 20px;
+	background: #fff;
 	border-radius: 90px;
 	margin-left: 20px;
 	opacity: 1;
+	-webkit-transition: all 0.3s;
 	transition: all 0.3s;
-}
-
-/*** Menu Styles ***/
-#menu {
-	justify-content: flex-end;
+  }
+  
+  /*** Menu Styles ***/
+  #menu {
+	-webkit-box-pack: end;
+			justify-content: flex-end;
 	padding-right: 40px;
-}
-
-li {
+  }
+  
+  li {
 	margin-left: 20px;
-	a {
-		@include object(80px,20px,$accent);
-		display: block;
-		border-radius: 90px;
-	}
-}
-
-#menu-toggle {
-	@include object(55px,55px,darken($nav-bg,5%));
-	@include center;
+  }
+  li a {
+	width: 80px;
+	height: 20px;
+	background: #fff;
+	display: block;
+	border-radius: 90px;
+  }
+  
+  #menu-toggle {
+	width: 55px;
+	height: 55px;
+	background: #2ea8ee;
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-pack: center;
+			justify-content: center;
+	-webkit-box-align: center;
+			align-items: center;
 	border-radius: 50%;
 	cursor: pointer;
 	display: none;
-	&:hover .bar {
-		width: 25px;
-	}
-	&.closeMenu {
-		.bar {
-			width: 25px;
-			&:first-child {
-				transform: translateY(7px) rotate(45deg);
-			}
-			&:nth-child(2) {
-				transform: scale(0);
-			}
-			&:last-child {
-				transform: translateY(-7px) rotate(-45deg);
-			}
-		}
-	}
-}
-
-.bar {
-	@include object(25px,2px,$accent);
+  }
+  #menu-toggle:hover .bar {
+	width: 25px;
+  }
+  #menu-toggle.closeMenu .bar {
+	width: 25px;
+  }
+  #menu-toggle.closeMenu .bar:first-child {
+	-webkit-transform: translateY(7px) rotate(45deg);
+			transform: translateY(7px) rotate(45deg);
+  }
+  #menu-toggle.closeMenu .bar:nth-child(2) {
+	-webkit-transform: scale(0);
+			transform: scale(0);
+  }
+  #menu-toggle.closeMenu .bar:last-child {
+	-webkit-transform: translateY(-7px) rotate(-45deg);
+			transform: translateY(-7px) rotate(-45deg);
+  }
+  
+  .bar {
+	width: 25px;
+	height: 2px;
+	background: #fff;
+	-webkit-transition: 0.3s ease-in-out;
 	transition: 0.3s ease-in-out;
-	&:nth-child(2) {
-		width: 20px;
-		margin: 5px 0;
-	}
-	&:last-child {
-		width: 15px;
-	}
-}
-
-/*** Hero Section Styles ***/
-#hero-section {
-	@include object(100vw,calc(100vh - 160px),null);
-	@include center;
+  }
+  .bar:nth-child(2) {
+	width: 20px;
+	margin: 5px 0;
+  }
+  .bar:last-child {
+	width: 15px;
+  }
+  
+  /*** Hero Section Styles ***/
+  #hero-section {
+	width: 100vw;
+	height: calc(100vh - 160px);
+	display: -webkit-box;
+	display: flex;
+	-webkit-box-pack: center;
+			justify-content: center;
+	-webkit-box-align: center;
+			align-items: center;
 	margin-top: 160px;
-}
-
-#head-line {
-	@include object(520px,30px,$accent);
+  }
+  
+  #head-line {
+	width: 520px;
+	height: 30px;
+	background: #fff;
 	border-radius: 90px;
 	position: relative;
-	&:before,
-	&:after {
-		content: "";
-		height: 30px;
-		border-radius: 90px;
-	}
-	&:before {
-		@include object(360px,null,$accent);
-		@include transPos(-60px,null,null,50%,-50%,0);
-	}
-	&:after {
-		@include object(200px,null,$accent);
-		@include transPos(null,null,-60px,50%,-50%,0);
-	}
-}
-
-/*** Section Styles ***/
-section {
-	@include object(100vw,calc(100vh - 100px),null);
+  }
+  #head-line:before, #head-line:after {
+	content: "";
+	height: 30px;
+	border-radius: 90px;
+  }
+  #head-line:before {
+	width: 360px;
+	background: #fff;
+	position: absolute;
+	top: -60px;
+	left: 50%;
+	-webkit-transform: translate(-50%, 0);
+			transform: translate(-50%, 0);
+  }
+  #head-line:after {
+	width: 200px;
+	background: #fff;
+	position: absolute;
+	left: 50%;
+	bottom: -60px;
+	-webkit-transform: translate(-50%, 0);
+			transform: translate(-50%, 0);
+  }
+  
+  /*** Section Styles ***/
+  section {
+	width: 100vw;
+	height: calc(100vh - 100px);
+	display: -webkit-box;
 	display: flex;
-	justify-content: center;
-	&:nth-child(odd) {
-		background: $pink;
-	}
-	&:nth-child(even) {
-		background: $aqua;
-	}
-}
-
-#heading {
-	@include object(120px,20px,$accent);
+	-webkit-box-pack: center;
+			justify-content: center;
+  }
+  section:nth-child(odd) {
+	background: #fa6c98;
+  }
+  section:nth-child(even) {
+	background: #79edfc;
+  }
+  
+  #heading {
+	width: 120px;
+	height: 20px;
+	background: #fff;
 	border-radius: 90px;
 	margin-top: 40px;
-}
-
-/*** Responsive Menu For Smaller Device ***/
-
-@media screen and (max-width: 767px) {
+  }
+  
+  /*** Responsive Menu For Smaller Device ***/
+  @media screen and (max-width: 767px) {
 	#menu-toggle {
-		display: flex;
+	  display: -webkit-box;
+	  display: flex;
 	}
+  
 	ul {
-		display: inline-block;
-		@include object(100vw,0,$aqua);
-		@include transPos(160px,null,null,null,null,null);
-		box-shadow: 0 5px 30px -4px rgba(#000, 0.2);
-		transition: all 0.3s;
-		&.showMenu {
-			height: 250px;
-			li {
-				height: 80px;
-				opacity: 1;
-				visibility: visible;
-			}
-		}
+	  display: inline-block;
+	  width: 100vw;
+	  height: 0;
+	  background: #79edfc;
+	  position: absolute;
+	  top: 160px;
+	  -webkit-transform: translate(, );
+			  transform: translate(, );
+	  box-shadow: 0 5px 30px -4px rgba(0, 0, 0, 0.2);
+	  -webkit-transition: all 0.3s;
+	  transition: all 0.3s;
 	}
+	ul.showMenu {
+	  height: 250px;
+	}
+	ul.showMenu li {
+	  height: 80px;
+	  opacity: 1;
+	  visibility: visible;
+	}
+  
 	li {
-		@include object(50%,80px,null);
-		float: left;
-		padding-left: 40px;
-		opacity: 0;
-		visibility: hidden;
-		margin-left: 0;
-		transition: all 0.3s 0.1s;
-		&:first-child,
-		&:nth-child(2) {
-			margin-top: 80px;
-		}
+	  width: 50%;
+	  height: 80px;
+	  float: left;
+	  padding-left: 40px;
+	  opacity: 0;
+	  visibility: hidden;
+	  margin-left: 0;
+	  -webkit-transition: all 0.3s 0.1s;
+	  transition: all 0.3s 0.1s;
 	}
+	li:first-child, li:nth-child(2) {
+	  margin-top: 80px;
+	}
+  
 	#head-line {
-		transform: scale(0.8);
+	  -webkit-transform: scale(0.8);
+			  transform: scale(0.8);
 	}
-}
-
-#youtube {
+  }
+  #youtube {
 	position: fixed;
 	right: 2vw;
 	bottom: 2vh;
 	font-size: 30px;
 	color: #fff;
-}
+  }
+  
